--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
             <link rel="stylesheet" href="styles.css">
         </head>
 
-        <body>
+        <header>
             <h1 class="grocery_store_name">Metro Grocery Store</h1>
+        </header>
+        <body>
             <div class="tab">
             <button class="tabLinks" onclick="openMenu('user')">User</button>
             <button class="tabLinks" onclick="openMenu('products')">Products</button>
@@ -49,6 +51,19 @@
             <br>
             Choose items to buy:
             <div id="showProducts"></div>
+
+            <div id="categoryDiv">
+                <p>Testing out my category functions **needs fixing</p>
+                <button id="categoryButton">Filter by Category</button>
+                <ul class="sub_categories" id="meatCategoryList">Meat</ul>
+                <ul class="sub_categories" id="dairyCategoryList">Dairy</ul>
+                <ul class="sub_categories" id="alternativesCategoryList">Alternatives</ul>
+                <ul class="sub_categories" id="vegetableCategoryList">Vegetables</ul>
+                <ul class="sub_categories" id="beverageCategoryList">Beverage</ul>
+                <ul class="sub_categories" id="fruitCategoryList">Fruit</ul>
+                <ul class="sub_categories" id="grainCategoryList">Grain</ul>      
+            </div>
+
             <button id="addCart" type="button" onclick="addToCart()">Add items to your cart</button>
         </div>
 
