Fixed categories need to add breadcrumbs

--- a/index.html
+++ b/index.html
@@ -50,18 +50,16 @@
             
             <br>
             Choose items to buy:
-            <div id="showProducts"></div>
-
-            <div id="categoryDiv">
-                <p>Testing out my category functions **needs fixing</p>
-                <button id="categoryButton">Filter by Category</button>
-                <ul class="sub_categories" id="meatCategoryList">Meat</ul>
-                <ul class="sub_categories" id="dairyCategoryList">Dairy</ul>
-                <ul class="sub_categories" id="alternativesCategoryList">Alternatives</ul>
-                <ul class="sub_categories" id="vegetableCategoryList">Vegetables</ul>
-                <ul class="sub_categories" id="beverageCategoryList">Beverage</ul>
-                <ul class="sub_categories" id="fruitCategoryList">Fruit</ul>
-                <ul class="sub_categories" id="grainCategoryList">Grain</ul>      
+            <div id="showProducts">
+                <!-- <button id="categoryButton">Filter by Category</button> -->
+                 <div id="meatCategoryList"></div> 
+                 <div id="fishCategoryList"></div> 
+                 <div id="alternativesCategoryList"></div> 
+                 <div id="vegetableCategoryList"></div> 
+                 <div id="fruitCategoryList"></div> 
+                 <div id="dairyCategoryList"></div> 
+                 <div id="beveragesCategoryList"></div> 
+                 <div id="grainCategoryList"></div> 
             </div>
 
             <button id="addCart" type="button" onclick="addToCart()">Add items to your cart</button>
